--- a/tick_surveillance_project.ipynb
+++ b/tick_surveillance_project.ipynb
@@ -1458,7 +1458,7 @@
     "            paper_bgcolor=\"#F1F6F1\", \n",
     "            font_color=\"black\",  \n",
     "            xaxis=dict(dtick=1),\n",
-    "            yaxis=dict(range=[0, 100])\n",
+    "            yaxis=dict(range=[0, 100], title=\"Percentage\")\n",
     "        )\n",
     "    \n",
     "    else:\n",
